Lexing/test_cases/good/back-zero-in-string.cl
(* "\0" in string *)

"foo\0bar"
