Lexing/test_cases/bad/back-eof-in-string.cl
(* backslash at EOF inside string *)

"foo\
